--- a/style.css
+++ b/style.css
@@ -1,3 +1,29 @@
-body {
-    background-color: lightblue;
-  }
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+
+.About {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+}
+
+.links {
+  display: flex;
+}
+
+.link {
+  color: blue;
+}
+
+.link a {
+  text-decoration: none;
+}
+
+.link a:hover {
+  text-decoration: underline;
+}
