--- a/style.css
+++ b/style.css
@@ -1,29 +1,52 @@
-* {
+*{
   padding: 0;
   margin: 0;
   border: 0;
 }
-
-.About {
+.About{
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px;
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
-
-.links {
+.links{
   display: flex;
+  column-gap: 20px;
 }
-
 .link {
   color: blue;
 }
-
-.link a {
+.link a{
   text-decoration: none;
 }
-
-.link a:hover {
+.link a:hover{
   text-decoration: underline;
+}
+
+.info-box {
+  max-width: 400px;
+  margin: 60px auto;
+  padding: 30px;
+  background: #f5f5f5;
+  border-radius: 20px;
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+  text-align: center;
+}
+
+.info-box h2 {
+  margin-bottom: 15px;
+  color: black;
+}
+
+.info-box p {
+  color: black;
+  font-size: 1.1rem;
+  line-height: 1.6;
+}
+.text{
+  text-align: center;
+}
+.images{
+  padding:100px;
 }
